--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -22,5 +22,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.0'
-    compile project(':base-adapter-library')
+    compile 'com.zhy:base-adapter:2.0.0'
 }
