--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.3'
+        classpath 'com.android.tools.build:gradle:2.1.0'
         classpath 'com.novoda:bintray-release:0.3.4'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -19,13 +19,13 @@ allprojects {
     }
 }
 
-ext {
-    userOrg = 'hongyangandroid'
-    groupId = 'com.zhy'
-    artifactId = 'base-adapter'
-    publishVersion = '2.0.0'
-    desc = 'a easy adapter for listview ,recyclerview, gridview . '
-    website = 'https://github.com/hongyangAndroid/baseAdapter'
-    licences = ['Apache-2.0']
-}
+//ext {
+//    userOrg = 'hongyangandroid'
+//    groupId = 'com.zhy'
+//    artifactId = 'base-adapter'
+//    publishVersion = '2.0.0'
+//    desc = 'a easy adapter for listview ,recyclerview, gridview . '
+//    website = 'https://github.com/hongyangAndroid/baseAdapter'
+//    licences = ['Apache-2.0']
+//}
 
