--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -23,8 +23,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
-    compile 'com.zhy:base-adapter:3.0.2'
-    compile 'com.zhy:base-rvadapter:3.0.2'
-//    compile project(':base-adapter-library')
-//    compile project(':baseadapter-recyclerview')
+//    compile 'com.zhy:base-adapter:3.0.2'
+//    compile 'com.zhy:base-rvadapter:3.0.2'
+    compile project(':base-adapter-library')
+    compile project(':baseadapter-recyclerview')
 }
