--- a/baseadapter-recyclerview/build.gradle
+++ b/baseadapter-recyclerview/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-//apply plugin: 'com.novoda.bintray-release'
+apply plugin: 'com.novoda.bintray-release'
 
 android {
     compileSdkVersion 23
@@ -24,12 +24,12 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.4.0'
 }
 
-//publish {
-//    userOrg = 'hongyangandroid'
-//    groupId = 'com.zhy'
-//    artifactId = 'base-rvadapter'
-//    publishVersion = '3.0.2'
-//    desc = 'a easy adapter for recyclerview'
-//    website = 'https://github.com/hongyangAndroid/baseAdapter'
-//    licences = ['Apache-2.0']
-//}
+publish {
+    userOrg = 'hongyangandroid'
+    groupId = 'com.zhy'
+    artifactId = 'base-rvadapter'
+    publishVersion = '3.0.3'
+    desc = 'a easy adapter for recyclerview'
+    website = 'https://github.com/hongyangAndroid/baseAdapter'
+    licences = ['Apache-2.0']
+}
