--- a/baseadapter-recyclerview/build.gradle
+++ b/baseadapter-recyclerview/build.gradle
@@ -1,35 +1,27 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'
+// apply plugin: 'com.novoda.bintray-release'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
         minSdkVersion 10
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+        targetSdkVersion 25
     }
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
 }
 
-publish {
-    userOrg = 'hongyangandroid'
-    groupId = 'com.zhy'
-    artifactId = 'base-rvadapter'
-    publishVersion = '3.0.3'
-    desc = 'a easy adapter for recyclerview'
-    website = 'https://github.com/hongyangAndroid/baseAdapter'
-    licences = ['Apache-2.0']
-}
+//publish {
+//    userOrg = 'hongyangandroid'
+//    groupId = 'com.zhy'
+//    artifactId = 'base-rvadapter'
+//    publishVersion = '3.0.3'
+//    desc = 'a easy adapter for recyclerview'
+//    website = 'https://github.com/hongyangAndroid/baseAdapter'
+//    licences = ['Apache-2.0']
+//}
