--- a/baseadapter-recyclerview/build.gradle
+++ b/baseadapter-recyclerview/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.novoda.bintray-release'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
-        minSdkVersion 10
-        targetSdkVersion 23
+        minSdkVersion 16
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -21,15 +21,15 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'androidx.recyclerview:recyclerview:1.0.0'
 }
 
 publish {
     userOrg = 'hongyangandroid'
     groupId = 'com.zhy'
     artifactId = 'base-rvadapter'
-    publishVersion = '3.0.3'
-    desc = 'a easy adapter for recyclerview'
+    publishVersion = '3.0.4'
+    desc = 'a easy adapter for recyclerview for androidx'
     website = 'https://github.com/hongyangAndroid/baseAdapter'
     licences = ['Apache-2.0']
 }
